compiler/weave_syntax/tests/data/syntax/Namespace.error
error: Expected '[token:identifier]'
        --> <source>:102:13
         |
     102 |             );
         |             ^
